--- a/app.json
+++ b/app.json
@@ -24,6 +24,13 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "permissions": [
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.harshit1245.favourite_places",
+      "config": {
+        "googleMaps": { "apiKey": "" }
       }
     },
     "web": {
@@ -33,9 +40,15 @@
       [
         "expo-image-picker",
         {
-          "cameraPermission": "The app accesses your photos to take photos of your favourite places"
+          "cameraPermission": "The app accesses your photos to take photos of your favourite places",
+          "photosPermission": "dfvdfvfdvfdvfd"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "1f47b96c-8161-449d-b527-8dba92dc113e"
+      }
+    }
   }
 }
